Fixed bug #33673 (Added detection for partially uploaded files).